--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,75 +23,32 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.106" />
 
-    <ImageView
-        android:id="@+id/iv_album_1"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="90dp"
-        android:elevation="20dp"
-        android:background="@drawable/rounded_background"
-        android:clipToOutline="true"
-        android:src="@drawable/first"
-        app:layout_constraintBottom_toTopOf="@+id/iv_album_3"
-        app:layout_constraintEnd_toStartOf="@+id/iv_album_2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/iv_album_2" />
-
-    <ImageView
-        android:id="@+id/iv_album_2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="47dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="91dp"
-        android:background="@drawable/rounded_background"
-        android:clipToOutline="true"
-        android:src="@drawable/second"
-        android:elevation="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/iv_album_4"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toEndOf="@+id/iv_album_1"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <ImageView
-        android:id="@+id/iv_album_3"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:background="@drawable/rounded_background"
-        android:src="@drawable/third"
-        android:clipToOutline="true"
-        android:elevation="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_album_4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_album_1" />
-
-    <ImageView
-        android:id="@+id/iv_album_4"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="88dp"
-        android:elevation="20dp"
-        android:clipToOutline="true"
-        android:background="@drawable/rounded_background"
-        android:src="@drawable/forth"
-        app:layout_constraintStart_toEndOf="@+id/iv_album_3"
-        app:layout_constraintTop_toBottomOf="@+id/iv_album_2" />
 
     <Button
         android:id="@+id/catbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="133dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="143dp"
-        android:layout_marginBottom="90dp"
-        android:text="서버연결하기"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="536dp"
+        android:text="고양이 사진 받기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_album_3" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        android:layout_width="409dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/catbutton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
